# predictive-maintenance-ai-platform

./: .env.example  .gitignore  README.md  docker-compose.yml  package.json
backend/: .env.example  Dockerfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/app/: main.py
backend/app/api/v1/: router.py  routes_alerts.py  routes_engines.py  routes_fleet.py  routes_models.py
backend/app/core/: config.py  logging.py
backend/app/db/: __init__.py  models.py  session.py
backend/app/ml/data/: __init__.py  cmapss_schema.py  ingest_cmapss.py  rul_labels.py
backend/app/ml/features/: __init__.py  feature_engineering.py  scalers.py  sequence_windows.py
backend/app/ml/models/: __init__.py  baseline.py  lstm.py
backend/app/ml/training/: __init__.py  evaluate.py  splits.py  train_baseline.py  train_lstm.py
backend/app/schemas/: alert.py  engine.py  fleet.py  model.py
backend/app/services/: mock_store.py  risk.py
backend/app/tests/: conftest.py  test_api_contract.py  test_cmapss_loader.py  test_config.py  test_db.py  test_db_health.py  test_feature_engineering.py  test_health.py  test_sequence_windows.py  test_train_baseline.py  test_train_lstm.py
docs/: API_CONTRACT.md  ARCHITECTURE.md  BACKEND_PLAN.md  DATABASE_SCHEMA.md  DOCKER.md  FRONTEND_CONTEXT.md  ML_PIPELINE.md  PROJECT_CONTEXT.md
frontend/: .env.example  metadata.json  package-lock.json  package.json
src/: App.tsx
src/api/: client.ts  mockData.ts  types.ts
src/components/: RiskBadge.tsx
(+32 files in other folders)
