[project]
name = "predictive-maintenance-backend"
version = "0.1.0"
description = "FastAPI backend for predictive maintenance AI platform"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic-settings>=2.6.0",
    "sqlalchemy>=2.0.36",
    "psycopg2-binary>=2.9.10",
    "alembic>=1.14.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
    "pandas>=2.2.0",
]
ml = [
    "mlflow>=2.18.0,<3.0",
    "pandas>=2.2.0",
    "scikit-learn>=1.5.0",
    "joblib>=1.4.0",
    "torch>=2.0.0",
]

[build-system]
requires = ["setuptools>=75.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app", "app.api", "app.api.v1", "app.core", "app.db", "app.schemas", "app.services", "app.ml", "app.ml.data", "app.ml.features", "app.ml.models", "app.ml.training"]

[tool.pytest.ini_options]
testpaths = ["app/tests"]
pythonpath = ["."]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
